# wrapper-v2

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LIBS_VERSION.json  LICENSE  README.md  compose.yaml
.github/workflows/: build.yml
rootfs/system/lib64/: .gitkeep
src/daemon/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/daemon/apple/: abi.hpp  auth.cpp  auth.hpp  loader.cpp  loader.hpp  runtime.cpp  runtime.hpp  tokens.cpp  tokens.hpp
src/launcher/: wrapper.c
tools/: extract-libs.sh  fetch-apk.sh  stage-system.sh
